# Fun-With-PBR

./: CMakeLists.txt  README.md
Debug/: game.ilk  imgui.ini
Release/: VanillaEngine.lib
src/: CMakeLists.txt
src/Resources/Old_Antique_Standing_Globe_OBJ/: Old_Antique_Standing_Globe_.mtl
src/Resources/shaders/: NormalDebug.txt  TangentDebug.txt  pbrShader.txt  prefilter.frag  singleColor.vert  skybox.frag  test.txt
src/Resources/shaders/vertFragFiles/: NormalDebug.vert  pbr - Copy.frag  pbr.frag  pbr.vert  pbr2.frag  pbr2.vert
src/VanillaEngine/: Application.cpp  Application.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  Camera.cpp  Camera.h  Component.cpp  Component.h  DebugUIManager.cpp  DebugUIManager.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OutlineRenderer.cpp  OutlineRenderer.h  PBR_Material.cpp  PBR_Material.h  PointLight.h  PrimitiveShape.h  Renderer.cpp  Renderer.h  Resources.h  SaveManager.cpp  SaveManager.h  SceneManager.cpp  SceneManager.h  ShaderProgram.cpp  ShaderProgram.h  SkyBox.cpp  Skybox.h  Sphere.h  (+9 more)
src/game/: FirstPersonCameraControls.cpp  FirstPersonCameraControls.h  SceneSwitcher.cpp  SceneSwitcher.h  main.cpp
